# printvault

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  compose.yaml
backend/: alembic.ini  pyproject.toml
backend/alembic/versions/: 0001_initial.py  0002_domain_models.py  0003_projects.py  0004_asset_metadata.py  0005_manual_thumbnail.py  0006_project_folders.py  0007_library_exclude_rules.py  0008_helper_pairing_and_jobs.py
backend/app/: __init__.py  config.py  db.py  main.py  migrations.py  worker.py
backend/app/api/: __init__.py  production.py  sqlalchemy_repository.py
backend/app/auth/: __init__.py  oidc.py
backend/app/models/: __init__.py
backend/app/services/: archive.py  filesystem.py  indexer.py  metadata.py  rbac.py  three_mf_metadata.py  thumbnails.py
backend/printvault_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_api_assets.py  test_api_authz.py  test_api_helper.py  test_api_production.py  test_archive.py  test_config.py  test_db.py  test_filesystem.py  test_indexer.py  test_main.py  test_metadata.py  test_migrations.py  test_models.py  test_oidc.py  test_rbac.py  test_three_mf_metadata.py  test_thumbnails.py
backend/tests/fixtures/: two-facet.stl
docker/: entrypoint.sh  nginx.conf  placeholder_server.py
docs/: deployment.md  helper-setup.md  index.json  security.md  slicer-helper-protocol.md  wiki-project-initial.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
helper/: README.md  build_packages.py  (+4 more)
(+32 files in other folders)
