[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "printvault-backend"
version = "0.1.0"
description = "PrintVault FastAPI backend"
requires-python = ">=3.12,<3.14"
dependencies = [
    "alembic>=1.14,<2.0",
    "fastapi>=0.115,<0.117",
    "httpx>=0.27,<1.0",
    "itsdangerous>=2.2,<3.0",
    "pydantic-settings>=2.7,<3.0",
    "python-multipart>=0.0.20,<1.0",
    "PyJWT[crypto]>=2.10,<3.0",
    "PyMySQL>=1.1,<2.0",
    "SQLAlchemy>=2.0,<3.0",
    "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
test = ["pytest>=8.3,<9.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools.packages.find]
include = ["app*"]
